--- a/package.json
+++ b/package.json
@@ -14,7 +14,5 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.9"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
-  }
+  "devDependencies": {}
 }
